fixed selection in dark mode

--- a/sass/_utils.scss
+++ b/sass/_utils.scss
@@ -11,6 +11,7 @@
 }
 .selected {
   background-color: #edebeb;
+  color: #000000;
   border-radius: 3px;
 }
 .dark-mode {
